--- a/fe/fe-iot/package.json
+++ b/fe/fe-iot/package.json
@@ -21,6 +21,7 @@
     "@stomp/stompjs": "^7.0.0",
     "ng-zorro-antd": "^16.2.0",
     "ng2-charts": "^5.0.3",
+    "recordrtc": "^5.6.2",
     "rxjs": "~7.8.0",
     "sockjs-client": "^1.6.1",
     "tslib": "^2.3.0",
@@ -31,6 +32,9 @@
     "@angular/cli": "^16.2.6",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/moment": "^2.13.0",
+    "@types/recorder-js": "^1.0.4",
+    "@types/recordrtc": "^5.6.14",
     "@types/sockjs-client": "^1.5.3",
     "@types/stompjs": "^2.3.7",
     "jasmine-core": "~4.6.0",
